--- a/BetterSom/Views/homeSom.xaml
+++ b/BetterSom/Views/homeSom.xaml
@@ -35,7 +35,11 @@
                 <AppBarButton Icon="Setting" HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="{ThemeResource SystemControlForegroundAltHighBrush}"/>
             </Grid> 
           
-        </Grid> 
-        <WebView Grid.Row="1" x:Name="webView" />
-    </Grid>
+        </Grid>
+     
+        <Image x:Name="RenderedImage" Grid.Row="1"/>
+        <WebView  x:Name="webView" Height="160" Width="110" Margin="3012,-460,-3012,264" />
+      
+    </Grid>  
+ 
 </Page>
