--- a/BetterSom/App.xaml
+++ b/BetterSom/App.xaml
@@ -4,5 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BetterSom"
     RequestedTheme="Light">
+    <Application.Resources>
+        
+    </Application.Resources>
 
 </Application>
